[package]
name = "spasm"
version = "1.0.0"
edition = "2021"
authors = ["Jacob Morrison <jacob.morrison@vai.org>"]
description = "CLI for finding ASM with the epiBED file format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = { version = "0.40.2" }
clap = { version = "4.1.4", features = ["derive"] }
anyhow = { version = "1.0.68" }
quit = { version = "1.2.0" }
snafu = { version = "0.7.4" }
