[package]
name = "spasm"
version = "1.1.0"
edition = "2021"
authors = ["Jacob Morrison <jacob.morrison@vai.org>"]
description = "CLI for finding ASM with the epiBED file format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = { version = "0.42.0" }
#rust-htslib = { git = "https://github.com/jamorrison/rust-htslib" }
clap = { version = "4.1.4", features = ["derive"] }
anyhow = { version = "1.0.68" }
quit = { version = "1.2.0" }
thiserror = { version = "1" }

[profile.release]
debug = 0
