[package]
name = "spasm"
version = "1.1.0"
edition = "2021"
authors = ["Jacob Morrison <jacob.morrison@vai.org>"]
description = "CLI for finding ASM with the epiBED file format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = { version = "0.44.1" }
clap = { version = "4.4.10", features = ["derive"] }
anyhow = { version = "1.0.75" }
quit = { version = "2.0.0" }
thiserror = { version = "1" }

[profile.release]
debug = 0
